# Sushi

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  index.js  package.json
commands/fun/: ppRate.js  waifuRate.js
commands/help/: help.js
commands/utility/: say.js
src/: config.rs  gemini_state.rs  logger.rs  main.rs
src/commands/: advice.rs  bot_info.rs  echo.rs  mod.rs
src/events/: message.rs  mod.rs
src/utils/: config.rs  gemini.rs  logger.rs  mod.rs  prompt_detector.rs
