[package]
name = "sushi-rs"
version = "4.0.0"
edition = "2024"
authors = ["Arikatsu"]

[dependencies]
poise = "0.6.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
toml = "0.9.7"
serde = { version = "1.0.227", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.145"
rand = "0.8.5"
chrono = "0.4.42"
chrono-tz = "0.10.4"
