[package]
name = "sushi-rs"
version = "4.1.0"
edition = "2024"
authors = ["Arikatsu"]

[dependencies]
poise = { version = "0.6.1", default-features = false, features = ["cache"] }
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
toml = "0.9.7"
serde = { version = "1.0.227", features = ["derive"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.145"
once_cell = "1.21.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
